syntax = "proto3";

package actions;

service ModuleActions {
  rpc Boom(Empty) returns(BoomReply) {}

  rpc Detach(Empty) returns(Boolean) {}

  rpc SetThrustersSpeed(Double) returns(SetThrustersSpeedReply) {}

  rpc Ok(Empty) returns(OkReply) {}

  rpc ToggleRunning(Empty) returns(RunningReply) {}

  rpc SetAltitudeToDetach(Double) returns(SetAltitudeToDetachReply) {}
}

message Empty {

}

message Boolean {
  bool val = 1;
}

message BoomReply {
  string content = 1;
}

message SetThrustersSpeedReply {
  string content = 1;
}

message Double {
  double val = 1;
}

message OkReply {
  string content = 1;
}

message RunningReply {
  string content = 1;
}

message SetAltitudeToDetachReply {
  string content = 1;
}